# opencv-header-only

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  README.md  README.zh-CN.md  TODOS.md
.github/workflows/: ci-compare-on-demand.yml  ci-compare-toggle.yml  ci.yml
benchmark/: baseline_imgproc_full.csv  baseline_imgproc_quick.csv  core_mat_header_benchmark.cpp  core_ops_benchmark.cpp  current_imgproc_full.csv  current_imgproc_quick.csv  cvtcolor_bgr2gray_header_benchmark.cpp  cvtcolor_bgr2gray_header_current.csv  cvtcolor_bgr_rgb_gray_header_p341.csv  cvtcolor_bgr_rgb_gray_header_p342.csv  cvtcolor_bgr_rgb_gray_header_p45.csv  gate_policy.json  imgproc_coverage_benchmark.cpp  imgproc_filter_benchmark.cpp  imgproc_header_benchmark.cpp  imgproc_ops_benchmark.cpp  opencv_compare_backend.h  opencv_compare_benchmark.cpp  opencv_compare_header_benchmark.cpp  opencv_compare_opencv_backend.cpp  opencv_compare_phase1_benchmark.h  opencv_compare_phase1_cases.inl  opencv_compare_phase1_header_benchmark.cpp  opencv_compare_phase1_opencv_backend.cpp  readme.md  resize_bilinear_header_benchmark.cpp  resize_bilinear_header_p361.csv  resize_bilinear_header_p362.csv  resize_bilinear_header_p363.csv  resize_bilinear_header_p364.csv  resize_bilinear_header_p364_arm_gate.csv  resize_bilinear_header_p45.csv
benchmark/common/: benchmark_common.h  benchmark_csv.h  benchmark_metadata.h  benchmark_report.py
benchmark/internal/: run_header_regression.sh
benchmark/opencv_compare/: README.md  csv_to_markdown.py  opencv_compare_quick.md  opencv_compare_stable.md  run_compare.sh  setup_opencv_bench_slim.sh
cmake/: opencv_header_onlyConfig.cmake.in
doc/: README.md  benchmark-refactor-implementation-plan.md  core-cpp-cleanup-plan.md  current-gap-audit-2026-04-14.md  design.md  dual-mode-gap-tracker.md  header-only-opencv-plan.md  imgproc-acceleration-plan.md  imgproc-cpp-cleanup-plan.md  imgproc-rollout-history.md  m1-morph-gradient-execution-plan-2026-04-18.md  m2-operator-rollout-plan-2026-04-18.md  mat-basic-op-acceleration-plan.md  mat-channel-plan-a.md  mat-contract-v1.md  mat-rollout-history.md  matexpr-scalar-compare-plan.md  native-backend-migration-plan.md  opencv-compare-baseline-day11-2026-04-18.md  opencv-core-imgproc-api-coverage.md  opencv-core-imgproc-phase1-implementation-plan.md  opencv-core-imgproc-three-phase-support-plan.md  opencv-core-interface-compat-test-plan.md  opencv-ui-kernel-migration-checklist.md  opencv-universal-intrinsics-adapter-plan.md  opencv_compare_baseline_stable.md  opencv_compare_m1_quick.md  opencv_compare_quick.md  opencv_compare_smoke_quick.md  opencv_compare_stable.md  parallel-for-cross-platform-plan-2026-04-15.md  performance-comparison-design.md  phase0-execution-plan.md  phase1-execution-plan.md  project-roadmap-history.md  scalar-mat-integration-plan.md  src-core-migration-tracker.md  transpose-x86-todo-2026-04-19.md
example/: highgui_imshow.cpp  readme.md
include/: cvh.h  readme.md
include/cvh/: cvh.h  readme.md
opencv_compare/: README.md  csv_to_markdown.py  run_compare.sh
scripts/: check_header_only_contract.sh  check_imgproc_benchmark_regression.py  check_public_headers.sh  ci_benchmark_headers_quick.sh  ci_compare_log_only.sh  ci_core_basic.sh  ci_full_all.sh  ci_headers_all.sh  ci_imgproc_quick_gate.sh  ci_lite_all.sh  ci_native_all.sh  ci_smoke.sh  read_gate_policy.py  sync_opencv_core_channel_cases.py  sync_opencv_imgcodecs_cases.py  sync_opencv_imgproc_cases.py  sync_opencv_imgproc_fixtures.py  sync_opencv_intrin.py  verify_core_contract.py
src/: readme.md
src/core/: basic_op.cpp  basic_op_scalar.cpp  define.impl.h  mat.cpp  mat_convert.cpp  mat_expr.cpp  mat_gemm.cpp  mat_utils.h  memory_utils.cpp  memory_utils.h  readme.md  system.cpp  utils.cpp
src/highgui/: display_cocoa.h  display_cocoa.mm  display_fb.cpp  highgui.cpp
src/imgproc/: backend_registry.cpp  box_filter.cpp  canny_deriv.cpp  canny_image.cpp  copy_make_border.cpp  cvtcolor.cpp  cvtcolor_internal.h  cvtcolor_rgb_gray.cpp  cvtcolor_yuv420.cpp  cvtcolor_yuv422.cpp  cvtcolor_yuv444.cpp  dilate.cpp  erode.cpp  fastpath_common.h  filter2d.cpp  gaussian_blur.cpp  lut.cpp  resize.cpp  resize_backend.cpp  sep_filter2d.cpp  sobel.cpp  threshold.cpp  warp_affine.cpp
test/: failing-tests.md  readme.md
test/core/: array_ops_contract_test.cpp  binary_op_contract_test.cpp  core_basic_test.cpp  gemm_pack_contract_test.cpp  geometry_types_contract_test.cpp  kernel_op_test.cpp  layout_ops_contract_test.cpp  mat_contract_test.cpp  mat_layout_semantics_test.cpp  mat_scalar_ops_test.cpp  mat_test.cpp  mat_upstream_channel_port_test.cpp  math_ops_contract_test.cpp  parallel_for_runtime_test.cpp  readme.md  reduction_ops_contract_test.cpp  scalar_contract_test.cpp  system_test.cpp
test/highgui/: highgui_contract_test.cpp  highgui_full_backend_test.cpp  highgui_native_backend_test.cpp
test/imgcodecs/: imgcodecs_format_test.cpp  readme.md
test/imgproc/: imgproc_canny_contract_test.cpp  imgproc_copy_make_border_contract_test.cpp  imgproc_cvtcolor_contract_test.cpp  imgproc_filter2d_contract_test.cpp  imgproc_filter_contract_test.cpp  imgproc_header_layout_test.cpp  imgproc_lut_contract_test.cpp  imgproc_morph_gradient_contract_test.cpp  imgproc_phase1_geometric_sampling_contract_test.cpp  imgproc_phase1_geometry_matrix_contract_test.cpp  imgproc_phase1_intensity_contract_test.cpp  imgproc_phase1_kernels_contract_test.cpp  imgproc_phase1_pyramid_color_contract_test.cpp  imgproc_pipeline_regression_test.cpp  imgproc_resize_contract_test.cpp  imgproc_sep_filter2d_contract_test.cpp  imgproc_threshold_contract_test.cpp  imgproc_warp_affine_contract_test.cpp  readme.md
test/opencv_contract/: opencv_contract_backend.cpp  opencv_contract_backend.h  opencv_contract_smoke_test.cpp
test/scripts/: test_check_imgproc_benchmark_regression.py  test_read_gate_policy.py  test_verify_core_contract.py
test/smoke/: cvh_core_header_odr_main.cpp  cvh_core_header_odr_peer.cpp  cvh_cvtcolor_opencv_intrin_smoke.cpp  cvh_header_compile_smoke.cpp  cvh_headers_fast_smoke.cpp  cvh_mode_smoke.cpp  (+12 more)
(+271 files in other folders)
